--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
                 </div>
                 <p><b>Sexo:</b></p>
                 <input type="radio" name="genero" id="feminino" value="feminino" required>
-                <label for="feminino" class="radioLabel">Feminimo</label>
+                <label for="feminino">Feminimo</label>
                 <br>
                 <input type="radio" name="genero" id="masculino" value="masculino" required>
-                <label for="masculino" class="radioLabel">Masculino</label>
+                <label for="masculino">Masculino</label>
                 <br>
                 <input type="radio" name="genero" id="outro" value="outro" required>
-                <label for="outro" class="radioLabel">Outro</label>
+                <label for="outro">Outro</label>
                 <br><br>
                 
                 <label for="data_nascimento"> <b>Data de nascimento:</b></label>
